add Nanum barun gothic font

--- a/public/index.html
+++ b/public/index.html
@@ -78,9 +78,9 @@
 				<ul id="nav" class="links">
           <li class="current"><a href="#about">About</a></li>
 					<li><a href="#founders">Founders</a></li>
-					<li><a href="#services">Teachers</a></li>
-					<li><a href="#services">Students</a></li>
+					<li><a href="#services">Members</a></li>
 					<li><a href="#portfolio">Portfolio</a></li>
+					<li><a href="#services">Sponsor</a></li>
 					<li><a href="#contact">Contact</a></li>
           <li><a class="to-top" href="#homepage"><i class="icon-chevron-up"></i><span>Home</span></a></li>
 				</ul>
@@ -116,21 +116,23 @@
 			<!-- Start Icons -->
 			<div class="service one-third column">
 				<h3>Learning</h3>
-				<div class="icon" style="background-image: url(./images/icons/photo.png)"></div>
-				<p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac augue at erat hendrerit dictum. Praesent porta, purus eget sagittis imperdiet, nulla mi ullamcorper metus, id hendrerit metus diam vitae est.</p>
-				<p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac augue at erat hendrerit dictum. </p>                                                 
+				<div class="icon" style="background-image: url(./images/icons/learn-icon.png)"></div>
+				<p class="description">HTML/CSS부터 jQuery와 같은 프론트엔드 기술, python과 같은 서버사이드 기술, Flask와 같은 Web Framework를 두 달 동안 배웁니다.</p>
+        <p class="description">집중력을 두 달 동안 발휘해봅시다. 쉽진 않을 겁니다. 분명 중간에 그만두고 싶은 순간이 올 겁니다. 하지만 배워놓으면, 인생에 날개가 달릴 겁니다.</p>
 			</div>
 					
 			<div class="service one-third column">
 				<h3>Programming</h3>
-				<div class="icon" style="background-image: url(./images/icons/video.png)"></div>
-				<p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac augue at erat hendrerit dictum. Praesent porta, purus eget sagittis imperdiet, nulla mi ullamcorper metus, id hendrerit metus diam vitae est. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>                                                 
+				<div class="icon" style="background-image: url(./images/icons/prog-icon.png)"></div>
+				<p class="description">HTML/CSS부터 jQuery와 같은 프론트엔드 기술, python과 같은 서버사이드 기술, Flask와 같은 Web Framework를 두 달 동안 배웁니다.</p>
+        <p class="description">집중력을 두 달 동안 발휘해봅시다. 쉽진 않을 겁니다. 분명 중간에 그만두고 싶은 순간이 올 겁니다. 하지만 배워놓으면, 인생에 날개가 달릴 겁니다.</p>
 			</div>
 					
 			<div class="service one-third column">
-				<h3>Deploying</h3>
-				<div class="icon" style="background-image: url(./images/icons/design.png)"></div>
-				<p class="description">Nulla lacinia odio quis tellus malesuada quis pulvinar augue tincidunt. Quisque sit amet nunc enim. Vestibulum convallis odio fringilla lectus tincidunt bibendum. Aenean venenatis. Nullam imperdiet, est blandit tristique blandit, massa nunc fermentum eros, non ullamcorper dolor dolor at quam.</p>                                                 
+				<h3>Servicing</h3>
+				<div class="icon" style="background-image: url(./images/icons/service-icon.png)"></div>
+				<p class="description">HTML/CSS부터 jQuery와 같은 프론트엔드 기술, python과 같은 서버사이드 기술, Flask와 같은 Web Framework를 두 달 동안 배웁니다.</p>
+        <p class="description">집중력을 두 달 동안 발휘해봅시다. 쉽진 않을 겁니다. 분명 중간에 그만두고 싶은 순간이 올 겁니다. 하지만 배워놓으면, 인생에 날개가 달릴 겁니다.</p>
 			</div>	
 			<!-- End Icons -->	
 		</div>
@@ -158,32 +160,28 @@
 		<div class="container">
 			<div class="sixteen columns">
 				<h1>Founders</h1>
-				<div class="one-text">
-					<p>Morbi suscipit interdum molestie. Aenean fringilla dui magna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Duis porttitor, velit et pretium porttitor, tellus massa porttitor tortor, accumsan cursus nulla nisi at tellus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac augue at erat hendrerit dictum. Praesent porta, purus eget sagittis imperdiet, nulla mi ullamcorper metus, id hendrerit metus diam vitae est.</p>
-				</div>
-			</div>
+      </div>
+    </div>
+		<div class="container">
 			<!-- Start Profile -->
-			<div class="one-third column">
+			<div class="eight columns">
 			    <div class="img-wrp">
 	    			<img alt="" class="scaleimg" src="images/team/profile1.jpg" />
 	    			<div class="overlay-wrp">
-	        			<div class="overlay"></div>
-	        			<ul class="social-icons overlay-content">
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin"></i></a></li>
-							<li><a href="#"><i class="icon-pinterest"></i></a></li>
-	        			</ul>
+              <div class="overlay"></div>
+              <ul class="social-icons overlay-content">
+                <li><a href="#"><i class="icon-facebook"></i></a></li>
+                <li><a href="#"><i class="icon-twitter"></i></a></li>
+              </ul>
 	    			</div>
 			    </div>
-				<h3>Alex Rudermann</h3>
-				<p class="job-position">Chief Executive Officer</p> 
+				<h3>이두희</h3>
 				<p class="description">Lorem ipsum dolor sit amet, consectetur <a href="#homepage">adipiscing elit</a>. Maecenas ac augue at erat hendrerit dictum. Praesent porta, purus eget sagittis imperdiet, nulla mi ullamcorper metus, id hendrerit metus diam vitae est. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
 			</div>
 			<!-- End Profile -->	
 			
 			<!-- Start Profile -->			
-			<div class="one-third column">
+			<div class="eight columns">
 			    <div class="img-wrp">
 	    			<img alt="" class="scaleimg" src="images/team/profile2.jpg" />
 	    			<div class="overlay-wrp">
@@ -200,25 +198,6 @@
 				<p class="description">Phasellus a nisi urna, facilisis facilisis diam. Vivamus enim ligula, sollicitudin nec porttitor nec, commodo vel justo. Nunc in mattis ipsum. Mauris accumsan pretium diam, sit amet iaculis purus ullamcorper ac. Donec pulvinar metus a ipsum varius suscipit. Mauris ut nisi at tortor molestie rhoncus ultrices quis nisi.</p>                                                 
 			</div>
 			<!-- End Profile -->	
-			
-			<!-- Start Profile -->			
-			<div class="one-third column">
-			    <div class="img-wrp">
-	    			<img alt="" class="scaleimg" src="images/team/profile3.jpg" />
-	    			<div class="overlay-wrp">
-	        			<div class="overlay"></div>
-	        			<ul class="social-icons overlay-content">
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin"></i></a></li>
-							<li><a href="#"><i class="icon-pinterest"></i></a></li>
-	        			</ul>
-	    			</div>
-			    </div>
-				<h3>Jack J. Brown</h3>
-				<p class="job-position">Art-Director</p> 
-				<p class="description">Aliquam erat volutpat. Nullam placerat enim nec quam dapibus ac egestas massa pulvinar. Nunc in sapien vitae orci viverra lacinia luctus id sapien. Mauris ut nisi at tortor molestie rhoncus ultrices quis nisi. Sed massa sapien, dapibus vel porta non, congue id nisl.</p>                                                 
-			</div>
-			<!-- End Profile -->
 		</div>
 	</div>
 	<!-- End Culture Page --> 
